--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@import "../../node_modules/preline/variants.css";
