--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,3 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-@import "../../node_modules/preline/variants.css";
+@import '../../node_modules/preline/variants.css';
